<resources>
    <string name="app_name">Just Java</string>

    <!-- Keys -->
    <string name="quantity">quantity</string>
    <string name="price">order summary</string>
    <string name="topping">toppings</string>
    <string name="cream">Whipped cream</string>
    <string name="choco">Chocolate</string>
    <!-- End -->

    <!-- EditTexts -->
    <string name="hint_name">Enter your name</string>
    <!-- End -->

    <!-- other buttons-->
    <string name="button">Submit</string>
    <!-- End -->

    <string name="num">1</string>
    <string name="priceNum">00,00 zł</string>

    <!-- increase decrease quantity buttons-->
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <!-- End -->

    <!-- Java -->
    <string name="toas_100">You cannot have less than 100 coffee</string>
    <string name="toas_1">You cannot have less than 1 coffee</string>

    <string name="yes">yes</string>
    <string name="no">no</string>

    <!-- Order summary -->
    <string name="name">Name: </string>
    <string name="quan">"Quantity: "</string>
    <string name="total">"Total: "</string>
    <string name="thanks">"Thank you"</string>


    <!-- End -->
</resources>
